# PythonPs

./: events.txt
aMazeIng/Pruebas/: prueba.py
data_quest_tools/: exercise_1_helper.py:Zone.Identifier
m00/ex1/: ft_plot_area.py
m00/ex2/: ft_harvest_total.py
m00/ex3/: ft_plant_age.py
m00/ex4/: ft_water_reminder.py
m00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
m00/ex7/: ft_seed_inventory.py
m01/ex0/: ft_garden_intro.py
m01/ex1/: ft_garden_data.py
m01/ex2/: ft_plant_growth.py
m01/ex3/: ft_plant_factory.py
m01/ex4/: ft_garden_security.py
m01/ex5/: ft_plant_types.py
m01/ex6/: ft_garden_analytics.py  ft_garden_analytics2.py
m02/ex0/: ft_first_exception.py
m02/ex1/: ft_different_errors.py
m02/ex2/: ft_custom_errors.py
m02/ex3/:  ft_finally_block.py
m02/ex4/: ft_raise_errors.py
m02/ex5/:  ft_garden_management.py
m03/ex0/: ft_command_quest.py
m03/ex1/: ft_score_analytics.py
m03/ex2/: ft_coordinate_system.py
m03/ex3/: ft_achievement_tracker.py
m03/ex4/: ft_inventory_system.py
m03/ex5/: convert_txt.py  ft_data_stream.py
m03/ex6/: ft_analytics_dashboard.py
m04/ex0/: archivo.txt  ft_ancient_text.py
m04/ex1/: ft_archive_creation.py
m06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
m07/:  tournament.py  battle.py  capacitor.py  tournament.py
m08/ex1/: loading.py  pyproject.toml  requirements.txt
(+44 files in other folders)
