[tool.poetry]
name = "loading-programs"
version = "0.1.0"
description = "Data analysis tool for python module 08 ex1"
authors = ["lospina- <lospina-@student.42madrid.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
