[project]
name = "loading-project"
version = "0.1.0"
description = "matrix data analysis tool for python m08"
authors = [
    {name = "lospina-",email = "lospina-@student.42madrid.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (==2.3.3)",
    "numpy (==2.2.6)",
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "\"loading"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
